--- a/styles/styles.css
+++ b/styles/styles.css
@@ -179,6 +179,19 @@ nav a:hover {
   box-shadow: 0 0 12px rgba(0,0,0,0.05);
 }
 
+
+
+.primary-btn {
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+        }
+
+
+
+
 .job-card h4 {
   font-size: 1.5rem;
   margin-bottom: 10px;
